2da entrega proy final

--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -4,5 +4,7 @@
     <a class="nav-link" href="/api/productos/pantalones">Pantalones</a>
     <a class="nav-link" href="/api/productos/remeras">Remeras</a>
     <a class="nav-link" href="/api/productos/zapatillas">Zapatillas</a>
-    <a class="nav-link" href="/api/carrito">Carrito</a>
+    <a class="nav-link" href="/api/carrito">
+      <i class="fas fa-shopping-cart"></i>
+    </a>
   </nav>
