--- a/src/views/secciones/pantalones.ejs
+++ b/src/views/secciones/pantalones.ejs
@@ -6,5 +6,28 @@
 
     <%- include("../partials/navbar.ejs") %>
 
+    <div class="d-flex flex-wrap">
+
+        <% arrayPantalones.forEach(function(e){%>
+            <div class="container d-flex justify-content-center mt-100">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="product-wrapper mb-45 text-center">
+                            <div class="product-img">
+                                <img src=<%= e.img %>  alt="img">
+                                <span class="text-center"><i class="fa fa-rupee"></i>$ <%= e.precio %> 
+                                </span>
+                                <div class="product-action">
+                                    <div class="product-action-style">
+                                         <a href="#"> <i class="fas fa-eye"></i> </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <% }) %>
+    </div>
 
     <%- include("../partials/footer.ejs") %>
