--- a/src/views/secciones/camisas.ejs
+++ b/src/views/secciones/camisas.ejs
@@ -1,10 +1,34 @@
 <%- layout("layouts/main.ejs") %>
 
-
     <div class="p-3 mb-2 bg-dark text-center">
         <h1 style="color: white;">CAMISAS</h1>
     </div>
 
     <%- include("../partials/navbar.ejs") %>
 
-    <%- include("../partials/footer.ejs") %>
+        <div class="d-flex flex-wrap">
+
+            <% arrayCamisas.forEach(function(e){%>
+                <div class="container d-flex justify-content-center mt-100">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="product-wrapper mb-45 text-center">
+                                <div class="product-img">
+                                    <img src=<%= e.img %>  alt="img">
+                                    <span class="text-center"><i class="fa fa-rupee"></i>$ <%= e.precio %> 
+                                    </span>
+                                    <div class="product-action">
+                                        <div class="product-action-style">
+                                             <a href="#"> <i class="fas fa-eye"></i> </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <% }) %>
+        </div>
+
+
+        <%- include("../partials/footer.ejs") %>
