--- a/src/views/main.ejs
+++ b/src/views/main.ejs
@@ -16,22 +16,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/api/productos/remeras">Remeras</a>
+                            <a class="nav-link" href="/ingreso"><button class="btn btn-success">Ingresar</button></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/api/productos/camisas">Camisas</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/api/productos/pantalones">Pantalones</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/api/productos/zapatillas">Zapatillas</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#"><button class="btn btn-success">Ingresar</button></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#"><button class="btn btn-warning">Regristrarse</button></a>
+                            <a class="nav-link" href="/registro"><button class="btn btn-warning">Regristrarse</button></a>
                         </li>
                     </ul>
                 </div>
