--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -4,7 +4,18 @@
     <a class="nav-link" href="/api/productos/pantalones">Pantalones</a>
     <a class="nav-link" href="/api/productos/remeras">Remeras</a>
     <a class="nav-link" href="/api/productos/zapatillas">Zapatillas</a>
-    <a class="nav-link" href="/api/carrito">
-      <i class="fas fa-shopping-cart"></i>
-    </a>
-  </nav>
+    <div class="btn-group">
+      <button type="button" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+        Action
+      </button>
+      <ul class="dropdown-menu text-center">
+        <li><a class="dropdown-item" href="/perfil">Perfil</a></li>
+        <li><a class="nav-link" href="/api/carrito">
+          <i class="fas fa-shopping-cart"></i>
+        </a></li>
+        <li><hr class="dropdown-divider"></li>
+        <li><a class="dropdown-item" href="/exit">Salir</a></li>
+      </ul>
+    </div>
+   
+</nav>
