--- a/src/views/secciones/camisas.ejs
+++ b/src/views/secciones/camisas.ejs
@@ -19,7 +19,7 @@
                                     </span>
                                     <div class="product-action">
                                         <div class="product-action-style">
-                                             <a href="#"> <i class="fas fa-eye"></i> </a>
+                                             <a href="/api/productos/camisas/<%= e.id %>"> <i class="fas fa-eye"></i> </a>
                                         </div>
                                     </div>
                                 </div>
