--- a/src/views/secciones/zapatillas.ejs
+++ b/src/views/secciones/zapatillas.ejs
@@ -20,7 +20,7 @@
                                 </span>
                                 <div class="product-action">
                                     <div class="product-action-style">
-                                         <a href="#"> <i class="fas fa-eye"></i> </a>
+                                         <a href="/api/productos/zapatillas/<%= e.id %>"> <i class="fas fa-eye"></i> </a>
                                     </div>
                                 </div>
                             </div>
